--- a/library.properties
+++ b/library.properties
@@ -2,7 +2,7 @@ name=Chetch
 version=1.0.0
 author=Bill <bill@chetch.net>
 maintainer=Bill <bill@chetch.net>
-sentence=A library that makes coding a Webserver a breeze.
+sentence=To assist in computer to arduino connections
 paragraph=Firmata stuff
 category=Uncategorized
 url=http://example.com/
